# RoomSeeker

./: LICENSE  README.md
ControlLevel1/auto_run_1/: auto_run_1.ino
ControlLevel1/auto_run_2/: L298N.h  rotary_encoders.cpp  setting.h
ControlLevel1/encoder_2/: encoder_2.ino
ControlLevel1/encoder_3/: encoder_3.ino
ControlLevel1/encoder_4/: encoder_4.ino
ControlLevel1/identification_1/: identification_1.ino
ControlLevel1/motor_control_1/: motor_control_1.ino
ControlLevel1/motor_control_2/: motor_control_2.ino
ControlLevel1/us_sensor_1/: us_sensor_1.ino
ControlLevel1/us_sensor_2/: us_sensor_2.ino
ControlLevel1/us_sensor_3/: L298N.cpp  rotary_encoders.h  us_sensor_3.ino
ControlLevel1_MecanumV1/auto_run_1/: auto_run_1.ino  setting.h
ControlLevel1_MecanumV1/auto_run_2/: auto_run_2.ino  print.h
ControlLevel1_MecanumV1/encoder/: encoder.ino
ControlLevel1_MecanumV1/identification_1/: identification_1.ino
ControlLevel1_MecanumV1/motor_control_1/: motor_control_1.ino
ControlLevel1_MecanumV1/motor_control_2/: motor_control_2.ino
ControlLevel1_MecanumV1/us_sensor_2/: us_sensor_2.ino
ControlLevel1_MecanumV1/us_sensor_3/: print.h
ControlLevel1_MecanumV2/: MotorControlTest_v1.py  turtlebot3_core_v1.py
ControlLevel1_MecanumV2/_archive/motor_control/: rotary_encoders_uno.cpp  rotary_encoders_uno.h
ControlLevel1_MecanumV2/motor_control/: motor_control.ino  rotary_encoders_uno.cpp
ControlLevel1_MecanumV2/motor_control_identification/: FaBoPWM_PCA9685.cpp  FaBoPWM_PCA9685.h  motor_control_identification.ino  rotary_encoders_uno.h
ControlLevel1_MecanumV2/motor_control_with_PS2/: motor_control_with_PS2.ino
ControlLevel1_MecanumV2/motor_control_with_ros/: motor_control_with_ros.ino  rotary_encoders_uno.cpp
ControlLevel1_MecanumV3/PS2_controller/: PS2X_lib.cpp  PS2_controller.ino
ControlLevel1_MecanumV3/battery_check/: battery_check.ino
ControlLevel1_MecanumV3/control_all/: acceleration.cpp  control_all.ino
ControlLevel1_MecanumV3/imu_in_interrupt_loop/: imu_in_interrupt_loop.ino
ControlLevel1_MecanumV3/imu_in_main_loop/: imu_in_main_loop.ino  mpu9250.cpp
ControlLevel1_MecanumV3/ir_sensor/: ir_sensor.ino
ControlLevel1_MecanumV3/motor_control/: motor_control.ino
ControlLevel1_MecanumV3/motor_control_identification/: motor_control_identification.ino  rotary_encoders.cpp  rotary_encoders.h
ControlLevel1_MecanumV3/motor_control_node/: acceleration.h  command.cpp  rotary_encoders.cpp
ControlLevel1_MecanumV3/motor_drive/: motor_drive.ino
ControlLevel1_MecanumV3/sensor_all/: command.cpp  command.h  i2c_basics.cpp  sensor_all.ino
ControlLevel1_MecanumV3/us_sensor_in_interrupt/: us_sensor_in_interrupt.ino
ControlLevel1_MecanumV3/us_sensor_in_loop/: us_sensor_in_loop.ino
ControlLevel2/: mecanum_car_sim.cpp  turtlebot3_core_v1.py
ControlLevel2/MotorControlPython/: MotorControlTest_v1.py  MotorControlTest_v2.py  MotorControl_with_Lidar_v1.py
ControlLevel2/_lib/: basic_calc.cpp  basic_figure.h  basic_matrix.h  basic_opengl.cpp  bmp_output.cpp  colors.h  makefile
ControlLevel2/_robot/: fprintf_data.txt  fprintf_data_format.txt  nzmn_control.h  nzmn_io.h  nzmn_model.h  nzmn_num_sim.h  nzmn_save_data.h
ControlLevel2/src_RaspberryPi3_(192.168.1.91)/: turtlebot3_core_v2.py
ControlLevel2/src_RemotePC/: sync.ffs_db
ControlLevel2/test/_lib/: basic_calc.h  (+2 more)
ControlLevel2/test_win/: magnetometer_gui.py  magnetometer_gui2021_01_23_15_32_52.csv  magnetometer_gui2021_01_23_15_35_01.csv  magnetometer_gui2021_01_23_15_35_52.csv  magnetometer_gui2021_01_23_15_38_02.csv  magnetometer_gui2021_01_23_15_52_52.csv  magnetometer_gui2021_01_23_15_53_32.csv  magnetometer_gui2021_01_23_15_59_36.csv  room_seeker_l1.py  room_seeker_win.py  地磁気センサテスト_210123_magnetometer_gui2021_01_23_15_38_02.xlsb
ControlLevel2/turtlebot3_bringup/: CMakeLists.txt
Level1_MotorNode/motor_control_node/: command.h  motor_control_node.ino  rotary_encoders.h  伝文フォーマット.txt
Level1_SensorNode/control_all/: PS2X_lib.h  mpu9250.h  rotary_encoders.cpp  伝文フォーマット.txt
Level1_SensorNode/sensor_all/: PS2X_lib.cpp  i2c_basics.h
Level2_Remote/: sync.ffs_db
Level2_Remote/room_seeker_description/: package.xml
Level2_Remote/room_seeker_description/launch/: description.launch.xml
Level2_Remote/room_seeker_description/meshes/sensors/: RP-lidar-A1.stl
Level2_Remote/room_seeker_description/urdf/: room_seeker.gazebo.xacro  room_seeker.urdf.xacro
Level2_Remote/room_seeker_navi/: CMakeLists.txt  package.xml
Level2_Remote/room_seeker_navi/launch/: amcl.launch  rs_navi_gmapping.launch
Level2_Remote/room_seeker_navi/map/: map.pgm
Level2_Remote/room_seeker_navi/rviz/: rs_navi.rviz
Level2_Remote/room_seeker_navi/scripts/: room_seeker_navi1.py
Level2_Remote/room_seeker_slam/: package.xml
Level2_Robot/room_seeker_core/: CMakeLists.txt  package.xml  sync.ffs_db
Level2_Robot/room_seeker_core/launch/: room_seeker_core.launch  room_seeker_level1.launch  room_seeker_lidar.launch  rs_robot.launch
Level2_Robot/room_seeker_core/scripts/: room_seeker_l1.py
Level2_Robot/room_seeker_core/src/: room_seeker_core.cpp  room_seeker_level1.cpp  room_seeker_level1.h
Level2_Robot/room_seeker_msgs/: CMakeLists.txt  package.xml
OsoyooMecanumCar/metal-2560-lesson1/: metal-2560-lesson1.ino
OsoyooMecanumCar/metal-2560-lesson1_2/: metal-2560-lesson1_2.ino
OsoyooMecanumCar/metal-2560-lesson2/: metal-2560-lesson2.ino
OsoyooMecanumCar/metal-2560-lesson2_2/: metal-2560-lesson2_2.ino
OsoyooMecanumCar/metal-2560-lesson3/: metal-2560-lesson3.ino
OsoyooMecanumCar/metal-2560-lesson3_2/: metal-2560-lesson3_2.ino
OsoyooMecanumCar/metal-2560-lesson4/: metal-2560-lesson4.ino
OsoyooMecanumCar/metal-2560-lesson5A/: metal-2560-lesson5A.ino
OsoyooMecanumCar/metal-2560-lesson5B/: metal-2560-lesson5B.ino
SensorBasics/Battery_voltage_test/: Battery_voltage_test.ino
SensorBasics/HC-SR04_test/: HC-SR04_test.ino
SensorBasics/IR_sensor_test/: IR_sensor_test.ino
SensorBasics/MPU-9250_test/: MPU-9250_test.ino
SensorBasics/gyro_acc_test/: gyro_acc_test.ino
SensorBasics/gyro_test/: gyro_test.ino
(+84 files in other folders)
