####################################################################################################
# Set minimum required version of cmake, project name and compile options
####################################################################################################
cmake_minimum_required(VERSION 3.0.2)
project(room_seeker_navi)

## Compile as C++11, supported in ROS Kinetic and newer
# add_compile_options(-std=c++11)

####################################################################################################
# Find catkin packages and libraries for catkin and system dependencies
####################################################################################################
find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  sensor_msgs
  room_seeker_msgs
  urdf
  xacro
)

####################################################################################################
# Setup for python modules and scripts                                                             #
####################################################################################################

####################################################################################################
# Declare ROS messages, services and actions                                                       #
####################################################################################################

####################################################################################################
# Declare ROS dynamic reconfigure parameters                                                       #
####################################################################################################

####################################################################################################
# catkin specific configuration                                                                    #
####################################################################################################
catkin_package(
  CATKIN_DEPENDS roscpp rospy std_msgs sensor_msgs room_seeker_msgs urdf xacro
)

####################################################################################################
# Build                                                                                            #
####################################################################################################
include_directories(
  ${catkin_INCLUDE_DIRS}
)

####################################################################################################
# Install                                                                                          #
####################################################################################################
catkin_install_python(PROGRAMS
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

#install(TARGETS 
#  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
#)

install(DIRECTORY launch
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)

####################################################################################################
# Testing                                                                                          #
####################################################################################################

